Update configuration: Add missing seeders to DatabaseSeeder, update .env.example, add deploy.sh

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,15 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 GENIEACS_URL=http://127.0.0.1:7557
+
+# WhatsApp Notification
+WHATSAPP_API_URL=
+WHATSAPP_API_KEY=
+
+# Telegram Notification
+TELEGRAM_BOT_TOKEN=
+
+# Slack Notification
+SLACK_BOT_USER_OAUTH_TOKEN=
+SLACK_BOT_USER_DEFAULT_CHANNEL=
+
