--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,8 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=
+
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
